// Copyright 2024 Caleb Cushing
//
// SPDX-License-Identifier: (AGPL-3.0-or-later WITH Universal-FOSS-exception-1.0 AND CC-BY-4.0) OR CC-BY-NC-4.0

package com.xenoterracide.commons.jpa.util;

/**
 * The type Constants.
 */
public final class Constants {

  /**
   * The constant TRANSACTION_SCOPE.
   */
  public static final String TRANSACTION_SCOPE = "transaction";

  private Constants() {}
}
